Divide main-service and auth-service. Restore logic
