# src/main-service/models/user.go
@@ -2,7 +2,6 @@ package models
 
 import (
 	"errors"
-	"fmt"
 	"reflect"
 	"strings"
 	"github.com/astaxie/beego/orm"
@@ -16,15 +15,10 @@ const (
 )
 
 type User struct {
-    Id                  int     `orm:"column(id);pk;auto"                   json:"id"`
-    Login               string  `orm:"column(login)"                        json:"-"`
-    Password            string  `orm:"column(password)"                     json:"-"`
-    Nickname            string  `orm:"column(nickname)"                     json:"nickname"`
-    Description         string  `orm:"column(description)"                  json:"description,omitempty"`
-    Avatar              string  `orm:"column(avatar)"                       json:"avatar,omitempty"`
-    // viewer - -1, registered user - 0, leader - 1, admin - 2, default is -1
-    // Can't be higher than `auth.MaxPermissionLevel` !
-    PermissionLevel     int     `orm:"column(permission_level);default(0)"  json:"permission_level,omitempty"`
+	Id          int     `orm:"column(id);pk;auto"                   json:"id"`
+	Nickname    string  `orm:"column(nickname)"                     json:"nickname"`
+	Description string  `orm:"column(description)"                  json:"description,omitempty"`
+	Avatar      string  `orm:"column(avatar)"                       json:"avatar,omitempty"`
 }
 
 type FullUserInfo struct {
@@ -32,7 +26,6 @@ type FullUserInfo struct {
 	Nickname        string          `json:"nickname"`
 	Description     string          `json:"description"`
 	Avatar          string          `json:"avatar"`
-	PermissionLevel int             `json:"permission_level"`
 	Contact         []*UserContact  `json:"contacts,omitempty"`
 }
 
@@ -161,12 +154,9 @@ func UpdateUserById(n *User) (err error) {
 		//fields filter
 		m := User{
 			Id: n.Id,
-			Login: v.Login,
-			Password: v.Password,
 			Nickname: n.Nickname,
 			Description: n.Description,
 			Avatar: n.Avatar,
-			PermissionLevel: v.PermissionLevel,
 		}
 		_, err = o.Update(&m)
 	}
@@ -180,10 +170,7 @@ func DeleteUser(id int) (err error) {
 	v := User{Id: id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
-		var num int64
-		if num, err = o.Delete(&User{Id: id}); err == nil {
-			fmt.Println("Number of records deleted in database:", num)
-		}
+		_, err = o.Delete(&v)
 	}
 	return
 }
@@ -207,30 +194,4 @@ func (m *User) Update(fields ...string) error {
 		return err
 	}
 	return nil
-}
-
-// return true if found, false if not
-func (m *User) FindByLogin() bool {
-	var anotherUser User
-	err := orm.NewOrm().QueryTable("user").Filter("login", m.Login).One(&anotherUser)
-	if err == orm.ErrMultiRows {
-		panic(err)
-	} else if err == orm.ErrNoRows {
-		return false
-	} else {
-		return true
-	}
-}
-
-// return true if found, false if not
-func GetUserByLogin(login string) (*User, error) {
-	var anotherUser User
-	err := orm.NewOrm().QueryTable("user").Filter("login", login).One(&anotherUser)
-	if err == orm.ErrMultiRows {
-		panic(err)
-	} else if err == orm.ErrNoRows {
-		return nil, errors.New("Not found")
-	} else {
-		return &anotherUser, nil
-	}
 }
